--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,3 @@
-h1,h2,h3,h4,h5,h6{
-    font-family: 'Poppins', sans-serif;
-   
-}
 .menu{
     width: 100%;
     height: 100px;
@@ -51,111 +47,33 @@ h1,h2,h3,h4,h5,h6{
     background-image: url(../imagen/fondo.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    background-position-y: center;
+    background-position-y: bottom;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
+    align-items: center;
 }
 .principal .con-texto{
     width: 400px;
-    height: 100px;
-    text-align: center;
+    height: 200px;
+    background-color: white;
 }
 .principal .con-texto h1{
     font-size: 50px;
-    color: rgb(7, 0, 0);
+    color: red;
 }
 .principal .con-texto p{
     font-size: 30px;
 }
 .principal .con-texto a{
     font-size: 20px;
-    background-color: rgb(243, 81, 81);
+    background-color: red;
     color: white;
     padding: 7px 15px;
     border-radius: 10px;
     text-decoration: none;
 }
-/*sesion descuento*/
-.descuento{
-     width: 100%;
-    height: auto;
-    display: flex;
-    flex-direction: column;
-   align-items: center;
-   
+.principal .imagen-trabajadores-d1 img{
+    width: 75%;
+    height: 50%;
+    border-radius: 20px;
 }
-.descuento .imagenes-des img{
-    width: 300px;
-    height: 300px;
-}
-.imagenes-des{
-    width: 80%;
-    display: flex;
-    justify-content: center ; 
-}
-.titulo h2,
-.producto .titulo-pro{
-    font-size: 50px;
-    color: red;
-    font-weight: bold;
-}
-.producto .titulo-pro h2{
-    font-size: 50px;
-}
-/*sesion productos*/
-.producto{
-    width: 100%;
-    height: auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-.con-productos{
-    width: 100%;
-    height: auto;
-}
-.con-productos .tarjeta-pro{
-    width: 400px;
-    height:500px;
-    border-radius: 10px;
-    border: 1px solid rgb(14, 13, 13); 
-   
-}
-.tarjeta-pro img{
-    width: 50%;
-    height: auto;
-    
-}
-.tarjeta-pro .contenido{
-    width: 100%;
-    height: auto;
-    text-align: center;
-}
-.tarjeta-pro .contenido h3{
- color:rgb(245, 10, 10);
- font-size: 35px;
- font-weight: bold;
-}
-.tarjeta-pro .contenido p{
-   font-size: 20px;
-}
-.tarjeta-pro .botones{
-    width: 100%;
-    height: auto;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-}
-.tarjeta-pro .botones p{
-    font-weight: bold;
-    color:black;
-}
-.tarjeta-pro .botones a{
-    background-color: red;
-    color: white;
-    padding: 7px 12px;
-    border-radius: 10px;
-    text-decoration: none;
-}
-
-
